--- a/index.html
+++ b/index.html
@@ -97,14 +97,66 @@
     </section>
     <section class="flora flex column">
       <div class="top">
-        <p>Flora</p>
+        <h3>Flora</h3>
       </div>
       <div class="card-slider swiper">
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="card swiper-slide">
+              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Azul</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur 
+                  adipisicing elit. Porro nisi fuga 
+                  eveniet natus ea consectetur
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Ipês</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur 
+                  adipisicing elit. Porro nisi fuga 
+                  eveniet natus ea consectetur
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Vermelho</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur 
+                  adipisicing elit. Porro nisi fuga 
+                  eveniet natus ea consectetur
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Verde</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur 
+                  adipisicing elit. Porro nisi fuga 
+                  eveniet natus ea consectetur
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Rosa</h1>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur 
+                  adipisicing elit. Porro nisi fuga 
+                  eveniet natus ea consectetur
+                </p>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
   
