versão 1.0 do site Concluída

--- a/index.html
+++ b/index.html
@@ -103,57 +103,64 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="card swiper-slide">
-              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <img src="assets/flora/babatimao.jpg" alt="árvore"> 
               <div class="card-middle">
-                <h1>Azul</h1>
+                <h1>Babatimão</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur 
-                  adipisicing elit. Porro nisi fuga 
-                  eveniet natus ea consectetur
+                  Planta medicinal utilizada por suas propriedades 
+                  adstringentes e cicatrizantes.
                 </p>
               </div>
             </div>
             <div class="card swiper-slide">
-              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <img src="assets/flora/buriti.jpg" alt="árvore"> 
               <div class="card-middle">
-                <h1>Ipês</h1>
+                <h1>Buriti</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur 
-                  adipisicing elit. Porro nisi fuga 
-                  eveniet natus ea consectetur
+                  Palmeira cujos frutos são utilizados para a produção 
+                  de óleo, e suas fibras são empregadas no artesanato.
                 </p>
               </div>
             </div>
             <div class="card swiper-slide">
-              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <img src="assets/flora/cagaiteira.png" alt="árvore"> 
               <div class="card-middle">
-                <h1>Vermelho</h1>
+                <h1>Cagaiteira</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur 
-                  adipisicing elit. Porro nisi fuga 
-                  eveniet natus ea consectetur
+                  Árvores que produzem a cagaita, um fruto ácido 
+                  utilizado em sucos e doces que são fontes de vitaminas.
                 </p>
               </div>
             </div>
             <div class="card swiper-slide">
-              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <img src="assets/flora/copaiba.jpg" alt="árvore"> 
               <div class="card-middle">
-                <h1>Verde</h1>
+                <h1>Copaíba</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur 
-                  adipisicing elit. Porro nisi fuga 
-                  eveniet natus ea consectetur
+                  Conhecida por sua resina medicinal, 
+                  usada tradicionalmente para tratar inflamações 
+                  e problemas respiratórios.
                 </p>
               </div>
             </div>
             <div class="card swiper-slide">
-              <img src="assets/fundo-pg3.jpg" alt="árvore"> 
+              <img src="assets/flora/ipe-amarelo.jpg" alt="árvore"> 
               <div class="card-middle">
-                <h1>Rosa</h1>
+                <h1>Ipê-amarelo</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur 
-                  adipisicing elit. Porro nisi fuga 
-                  eveniet natus ea consectetur
+                  Árvore de grande valor, conhecida por suas 
+                  flores amarelas vibrantes que embelezam o Cerrado 
+                  durante a floração.
+                </p>
+              </div>
+            </div>
+            <div class="card swiper-slide">
+              <img src="assets/flora/pequi.jpg" alt="árvore"> 
+              <div class="card-middle">
+                <h1>Pequí</h1>
+                <p>
+                  Fruto típico do Cerrado, utilizado na culinária 
+                  local, especialmente em pratos como arroz com pequi.
                 </p>
               </div>
             </div>
@@ -164,8 +171,51 @@
           <div class="swiper-button-next"></div>
       </div>
     </section>
-    <section class="queimadas">Queimadas</section>
-    <section class="sobrenos">Sobre Nós</section>
+    <section class="queimadas flex">
+      <div class="fotos">
+        <img src="assets/queimadas/foto1.jpeg" alt="foto 1">
+        <img src="assets/queimadas/foto2.jpg" alt="foto 2">
+      </div>
+      <div class="conteudo">
+        <h1>Ameaças</h1>
+        <p>
+          A fauna e a flora do Cerrado estão a cada dia mais ameaçadas, 
+          principalmente em decorrência da ação humana. Entre as 
+          principais ameaças enfrentadas, podemos citar: Aumento das 
+          cidades, avanço da agropecuária, queimadas, poluição, caça e pesca.
+        </p>
+        <p>
+          O Cerrado, a savana com maior diversidade biológica do mundo e 
+          um dos biomas mais importantes do Brasil, está sofrendo um 
+          aumento alarmante das taxas de desmatamento.
+        </p>  
+        <p>
+          Ao longo das últimas décadas, o Maranhão tem enfrentado uma 
+          expansão significativa de produção de grãos – essas atividades, 
+          quando não reguladas pelo estado, contribuem para a perda de 
+          grandes áreas de vegetação nativa.
+        </p>
+        <p>
+          Em 2022, a Assembleia Legislativa do Estado do Maranhão 
+          (ALEMA) aprovou o Zoneamento Ecológico-Econômico do Bioma 
+          Cerrado e Sistema Costeiro do Estado do Maranhão (ZEE-Cerrado).
+        </p>
+        <p>
+          Dados recentes do Instituto Nacional de Pesquisas Espaciais 
+          (INPE) indicaram que o Cerrado maranhense foi o mais devastado 
+          nos últimos três anos (2020-2022) – em 2022 o desmatamento 
+          aumentou em 24%, em comparação com o ano anterior, uma área 
+          equivalente à cidade de Manaus/AM. Essa taxa preocupante de 
+          destruição ameaça a rica diversidade biológica do bioma, os 
+          recursos hídricos e leva à violência contra comunidades 
+          tradicionais da região. Além disso, o desmatamento leva ao 
+          aumento da emissão de gases do efeito estufa, que agravam a 
+          crise climática e compromete os compromissos assumidos pelo 
+          Brasil em acordos climáticos. Clique aqui para conhecer a <a href="https://oeco.org.br/analises/a-ultima-chance-para-o-cerrado-maranhense/" target="_blank" rel="noopener noreferrer">fonte</a>.
+        </p> 
+      </div>
+    </section>
+    <!-- <section class="sobrenos">Sobre Nós</section> -->
   </main>
   <footer>
 
