--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
   <title>Eco Cerrado</title>
 </head>
 <body>
-  <header class="flex block">
+  <header id="home" class="flex block">
     <div class="title flex gap-3">
       <img src="assets/menu.svg" alt="menu-icon">
       <p>Eco Cerrado</p>
     </div>
     <nav class="flex gap-3">
-      <a href="#">Home</a>
-      <a href="#">Fauna</a>
-      <a href="#">Flora</a>
-      <a href="#">Sobre Nós</a>
+      <a href="#home">Home</a>
+      <a href="#fauna">Fauna</a>
+      <a href="#flora">Flora</a>
+      <a href="#ameaca">Ameaça</a>
+      <!-- <a href="#sobre-nos">Sobre Nós</a> -->
     </nav>
   </header>
   <main>
@@ -34,10 +35,10 @@
           endêmicas. O clima tropical da região é marcado por uma estação seca de cinco 
           meses e uma estação chuvosa, com precipitações variando entre 750 e 2000 mm por ano.
         </p>
-        <a href="#">SAIBA MAIS</a>
+        <a href="saibamais.html">SAIBA MAIS</a>
       </div>
     </section>
-    <section class="fauna">
+    <section id="fauna" class="fauna">
       <h3>Fauna</h3>
       <div class="container">
         <ul class="timeline">
@@ -95,7 +96,7 @@
         </ul>
       </div>
     </section>
-    <section class="flora flex column">
+    <section id="flora" class="flora flex column">
       <div class="top">
         <h3>Flora</h3>
       </div>
@@ -171,7 +172,7 @@
           <div class="swiper-button-next"></div>
       </div>
     </section>
-    <section class="queimadas flex">
+    <section id="ameaca" class="queimadas flex">
       <div class="fotos">
         <img src="assets/queimadas/foto1.jpeg" alt="foto 1">
         <img src="assets/queimadas/foto2.jpg" alt="foto 2">
@@ -215,7 +216,7 @@
         </p> 
       </div>
     </section>
-    <!-- <section class="sobrenos">Sobre Nós</section> -->
+    <!-- <section id="sobre-nos" class="sobrenos">Sobre Nós</section> -->
   </main>
   <footer>
 
