--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script type="module" src="script.js"></script>
   
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="assets/menu.svg" type="image/x-icon">
+  <link rel="icon" href="assets/icon-planta.svg" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eco Cerrado</title>
@@ -13,7 +13,7 @@
 <body>
   <header id="home" class="flex">
     <div class="title flex gap-3">
-      <img src="assets/menu.svg" alt="menu-icon">
+      <img src="assets/icon-planta.svg" alt="icon-planta-icon">
       <p>Eco Cerrado</p>
     </div>
     <nav class="flex gap-3">
@@ -221,7 +221,7 @@
   <footer id="sobre-nos">
     <header class="flex">
       <div class="title flex gap-3">
-      <img src="assets/menu.svg" alt="menu-icon">
+      <img src="assets/icon-planta.svg" alt="icon-planta-icon">
       <p>Sobre Nós</p>
       </div>
       <nav class="flex gap-3">
