--- a/saibamais.html
+++ b/saibamais.html
@@ -5,6 +5,7 @@
   <script type="module" src="script.js"></script>
   
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="assets/icon-planta.svg" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eco Cerrado</title>
